--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 </head>
+<!-- ihihoidfsdojif -->
 
 <body>
   <app-root></app-root>
